# actuaflow

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  INSTALLATION.md  LICENSE  LICENSING.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
actuaflow/: __init__.py  exceptions.py
actuaflow/exposure/: rating.py  trending.py
actuaflow/freqsev/: aggregate.py  frequency.py  severity.py
actuaflow/glm/: diagnostics.py  models.py
actuaflow/portfolio/: elasticity.py  impact.py
actuaflow/utils/: cross_validation.py  data.py  validation.py
docs/: Makefile  conf.py  index.md  make.bat  requirements.txt
docs/api/: actuaflow.rst  index.md  modules.rst
docs/examples/: index.md
docs/guide/: glm.md  index.md  pricing.md
examples/: motor_insurance.py
tests/: conftest.py  pytest.ini  test_edge_cases.py  test_exceptions.py  test_exposure.py  test_freqsev.py  test_glm.py  test_integration.py  test_portfolio.py  test_serialization.py  test_utils.py
